made changes for gbs

--- a/greenbuildingsupply/index.html
+++ b/greenbuildingsupply/index.html
@@ -143,6 +143,8 @@ background-color: #4e7f3d;
 <link rel="stylesheet" href="//d21gpk1vhmjuf5.cloudfront.net/jquery-unbxdautosuggest.css">
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.min.js"></script>
 <script src="//d21gpk1vhmjuf5.cloudfront.net/jquery-unbxdautosuggest.js"></script> 
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 <script type="text/javascript" src="http://gbs.unbxdapi.com/autosuggest.js"></script>
 <link rel="stylesheet" href="http://gbs.unbxdapi.com/autosuggest.css">
 
